# opencache

./: 404.html  Cargo.toml  README.md  book.toml  caveat.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  pages.yml
arch/: cache-replacement.html  client.html  internal-api.html  opencache.html  storage-model.html
doc/src/: SUMMARY.md  caveat.md
doc/src/arch/: cache-replacement.md  client.md  internal-api.md  opencache.md  storage-model.md
opencache/: Cargo.toml  Makefile
